--- a/Trap-Guessing-Game/index.html
+++ b/Trap-Guessing-Game/index.html
@@ -37,7 +37,7 @@
     <div class="sqr" id="7"></div>
     <div class="sqr" id="8"></div>
    </section>
-
+<div class="divider"></div>
    <section class="borad-pl2">
 
 
@@ -52,8 +52,8 @@
     <div class="sqr" id="8"></div>
    </section>
 </div>
-   <div>
-    <button class="controlButton">Start</button>
+   <div class="controlButton">
+    <button class="strat" >Start</button>
    </div>
 
 
