Adjust the board and strat button

--- a/Trap-Guessing-Game/index.html
+++ b/Trap-Guessing-Game/index.html
@@ -10,14 +10,14 @@
 <body>
 
     <div class="players">
-        <a href="">Player 1</a>
+        <a class="ply1Box" href="">Player 1</a>
             <div class="hearts" id="p1-hearts">
                 <span class="heart">❤️</span>
                 <span class="heart">❤️</span>
                 <span class="heart">❤️</span>
             </div>
-        <a href=""> Player 2</a>
-            <div class="hearts" id="p1-hearts">
+        <a class="ply2Box" href=""> Player 2</a>
+            <div class="hearts" id="p2-hearts">
                 <span class="heart">❤️</span>
                 <span class="heart">❤️</span>
                 <span class="heart">❤️</span>
@@ -25,32 +25,31 @@
     </div>
 <div class="fullBorad">    
    <section class="borad-pl1">
-
-
-    <div class="sqr" id="0"></div>
-    <div class="sqr" id="1"></div>
-    <div class="sqr" id="2"></div>
-    <div class="sqr" id="3"></div>
-    <div class="sqr" id="4"></div>
-    <div class="sqr" id="5"></div>
-    <div class="sqr" id="6"></div>
-    <div class="sqr" id="7"></div>
-    <div class="sqr" id="8"></div>
+        <div class="sqr" data-player="1" data-index="0"></div>
+        <div class="sqr" data-player="1" data-index="1"></div>
+        <div class="sqr" data-player="1" data-index="2"></div>
+        <div class="sqr" data-player="1" data-index="3"></div>
+        <div class="sqr" data-player="1" data-index="4"></div>
+        <div class="sqr" data-player="1" data-index="5"></div>
+        <div class="sqr" data-player="1" data-index="6"></div>
+        <div class="sqr" data-player="1" data-index="7"></div>
+        <div class="sqr" data-player="1" data-index="8"></div>
    </section>
+
 <div class="divider"></div>
+
    <section class="borad-pl2">
+        <div class="sqr" data-player="2" data-index="0"></div>
+        <div class="sqr" data-player="2" data-index="1"></div>
+        <div class="sqr" data-player="2" data-index="2"></div>
+        <div class="sqr" data-player="2" data-index="3"></div>
+        <div class="sqr" data-player="2" data-index="4"></div>
+        <div class="sqr" data-player="2" data-index="5"></div>
+        <div class="sqr" data-player="2" data-index="6"></div>
+        <div class="sqr" data-player="2" data-index="7"></div>
+        <div class="sqr" data-player="2" data-index="8"></div>
+    </section>
 
-
-    <div class="sqr" id="0"></div>
-    <div class="sqr" id="1"></div>
-    <div class="sqr" id="2"></div>
-    <div class="sqr" id="3"></div>
-    <div class="sqr" id="4"></div>
-    <div class="sqr" id="5"></div>
-    <div class="sqr" id="6"></div>
-    <div class="sqr" id="7"></div>
-    <div class="sqr" id="8"></div>
-   </section>
 </div>
    <div class="controlButton">
     <button class="strat" >Start</button>
