Finish with CSS

--- a/Trap-Guessing-Game/index.html
+++ b/Trap-Guessing-Game/index.html
@@ -9,22 +9,31 @@
 </head>
 <body>
 
-    <div class="players">
-        <a class="ply1Box" href="">Player 1</a>
-            <div class="hearts" id="p1-hearts">
-                <span class="heart">❤️</span>
-                <span class="heart">❤️</span>
-                <span class="heart">❤️</span>
-            </div>
-        <a class="ply2Box" href=""> Player 2</a>
-            <div class="hearts" id="p2-hearts">
-                <span class="heart">❤️</span>
-                <span class="heart">❤️</span>
-                <span class="heart">❤️</span>
-            </div>
+<div class="players">
+
+    <div class="ply1Box">
+        <div class="hearts">
+            <div id="p1-hearts-1">❤️</div>
+            <div id="p1-hearts-2">❤️</div>
+            <div id="p1-hearts-3">❤️</div>
+        </div>
+
+        <div class="player-name1">Player 1</div>
     </div>
-<div class="fullBorad">    
-   <section class="borad-pl1">
+
+    <div class="ply2Box">
+        <div class="hearts">
+            <div id="p2-hearts-1">❤️</div>
+            <div id="p2-hearts-2">❤️</div>
+            <div id="p2-hearts-3">❤️</div>
+        </div>
+
+        <div class="player-name2">Player 2</div>
+    </div>
+
+</div>
+<div class="fullBoard">    
+   <section class="board-pl1">
         <div class="sqr" data-player="1" data-index="0"></div>
         <div class="sqr" data-player="1" data-index="1"></div>
         <div class="sqr" data-player="1" data-index="2"></div>
@@ -38,7 +47,7 @@
 
 <div class="divider"></div>
 
-   <section class="borad-pl2">
+   <section class="board-pl2">
         <div class="sqr" data-player="2" data-index="0"></div>
         <div class="sqr" data-player="2" data-index="1"></div>
         <div class="sqr" data-player="2" data-index="2"></div>
