add cracker and start js

--- a/Trap-Guessing-Game/index.html
+++ b/Trap-Guessing-Game/index.html
@@ -34,29 +34,29 @@
 </div>
 <div class="fullBoard">    
    <section class="board-pl1">
-        <div class="sqr" data-player="1" data-index="0"></div>
-        <div class="sqr" data-player="1" data-index="1"></div>
-        <div class="sqr" data-player="1" data-index="2"></div>
-        <div class="sqr" data-player="1" data-index="3"></div>
-        <div class="sqr" data-player="1" data-index="4"></div>
-        <div class="sqr" data-player="1" data-index="5"></div>
-        <div class="sqr" data-player="1" data-index="6"></div>
-        <div class="sqr" data-player="1" data-index="7"></div>
-        <div class="sqr" data-player="1" data-index="8"></div>
+        <div class="sqr" data-player="1" data-index="0"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="1" data-index="1"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="1" data-index="2"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="1" data-index="3"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="1" data-index="4"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="1" data-index="5"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="1" data-index="6"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="1" data-index="7"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="1" data-index="8"> <img src="./cracker.png" alt="cracker photo"></div>
    </section>
 
 <div class="divider"></div>
 
    <section class="board-pl2">
-        <div class="sqr" data-player="2" data-index="0"></div>
-        <div class="sqr" data-player="2" data-index="1"></div>
-        <div class="sqr" data-player="2" data-index="2"></div>
-        <div class="sqr" data-player="2" data-index="3"></div>
-        <div class="sqr" data-player="2" data-index="4"></div>
-        <div class="sqr" data-player="2" data-index="5"></div>
-        <div class="sqr" data-player="2" data-index="6"></div>
-        <div class="sqr" data-player="2" data-index="7"></div>
-        <div class="sqr" data-player="2" data-index="8"></div>
+        <div class="sqr" data-player="2" data-index="0"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="2" data-index="1"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="2" data-index="2"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="2" data-index="3"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="2" data-index="4"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="2" data-index="5"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="2" data-index="6"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="2" data-index="7"> <img src="./cracker.png" alt="cracker photo"></div>
+        <div class="sqr" data-player="2" data-index="8"> <img src="./cracker.png" alt="cracker photo"></div>
     </section>
 
 </div>
